# hotels-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  hotels.db
migrations/: 1_create_hotels.sql  2_create_rooms.sql  3_create_orders.sql  3_create_room_uniq_key.sql  4_create_customers.sql  4_create_order_items.sql  5_create_order_items.sql  6_create_orders.sql  7_add_dates_to_order_items.sql  8_rework_orders.sql  9_change_intent_type.sql
src/: main.rs  migrate.rs
