[package]
name = "hotels-api"
version = "0.1.0"
edition = "2021"
default-run = "hotels-api"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-stripe = { version = "0.15.0", default_features = false, features = ["runtime-tokio-hyper-rustls", "checkout"] }
axum = "0.5.16"
chrono = { version = "0.4.22", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.21.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace", "tracing", "cors"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[[bin]]
name = "migrate"
path = "src/migrate.rs"
